# to-do

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .sample_env  Dockerfile  Jenkinsfile  LICENSE  README.md  build-docker-compose.yml  docker-compose.yml  docker-ignore  manage.py  pyproject.toml  pytest.ini
.github/: dependabot.yml  labeler.yml
.github/workflows/: coverage.yml  github-docker-registry-push.yml  plugin-update.yml  plugins-update-pr.sh  release-drafter.yml  ruff.yml  test-jenkins.yml  updatecli.yml
accounts/: forms.py  views.py
app/: asgi.py  settings.py  urls.py  wsgi.py
app/app/: settings.py
dockerfiles/: Dockerfile  update-plugins.sh
dockerfiles/agent-discovery/: Dockerfile  find-name.sh
dockerfiles/python/: Dockerfile
dockerfiles/side-kick/: Dockerfile  keygen.sh
static/css/: login.css  style.css
tasks/: forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
templates/accounts/: login.html  register.html
templates/tasks/: base.html  create_task.html  index.html  task.html  update_task.html
tests/: conftest.py  test_app.py
tests/integration_tests/: test_delete_user.py  test_register_user.py  test_view_task.py
tests/unit_tests/test_accounts/: test_forms.py  test_views.py
tests/unit_tests/test_tasks/: test_forms.py  test_models.py  test_views.py
to-do/: Jenkinsfile  pyproject.toml  pytest.ini
to-do/accounts/: forms.py  urls.py  views.py
to-do/app/: asgi.py  settings.py  urls.py
to-do/static/css/: login.css  style.css
to-do/tasks/: forms.py  models.py  urls.py  views.py
to-do/tasks/migrations/: 0001_initial.py
to-do/templates/accounts/: login.html  register.html
to-do/templates/tasks/: base.html  create_task.html  index.html  task.html  update_task.html
to-do/tests/: conftest.py
to-do/tests/integration_tests/: test_delete_user.py  test_register_user.py  test_view_task.py
to-do/tests/unit_tests/: test_views.py
to-do/tests/unit_tests/test_accounts/: test_forms.py  test_views.py
to-do/tests/unit_tests/test_tasks/: test_forms.py  test_models.py  test_views.py
