[project]
name = "to-do"
version = "0.1.0"
description = "A to-do app."
authors = [

    {name = "Jammithri",email = "kjam0045@mail.com"},
    {name = "payel",email = "payelmahapatra8693@gmail.com"},
    {name = "Anna Makarudze",email = "anna@makarudze.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
