[project]
name = "to-do"
version = "0.1.0"
description = "A to-do app."
authors = [
    {name = "meenakshiAS",email = "49203392+meenakshiAS@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
