[project]
name = "to-do"
version = "0.1.0"
description = "A to-do app."
authors = [
    {name = "Jammithri",email = "kjam0045@mail.com"},
    {name = "payel",email = "payelmahapatra8693@gmail.com"},
    {name = "Anna Makarudze",email = "anna@makarudze.com"},
    {name = "meenakshiAS",email = "49203392+meenakshiAS@users.noreply.github.com"},
]
   
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=4.2,<5.0)",
    "pytest (==8.3.4)",
    "pytest-django (==4.10.0)",
    "pytest-cov (==6.0.0)",
    "coverage (==7.6.12)",
    "python-dotenv (==1.0.1)",
    "pytest-dotenv (==0.5.2)",
    "ruff (==0.9.7)",
    "selenium (==4.29.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D401",  # imperative mood
    "D415", #missing docstring in public package
    "D104",
    "D100",
    "D103"
]

[tool.ruff.lint.pydocstyle]
convention = "google"