[project]
name = "app"
version = "0.1.0"
description = "A simple to-do app."
authors = [
    {name = "Anna Makarudze",email = "anna@makarudze.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (==4.2)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-django (>=4.10.0,<5.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "coverage (>=7.6.12,<8.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pytest-dotenv (>=0.5.2,<0.6.0)",
    "ruff (>=0.9.7,<0.10.0)",
    "selenium (>=4.29.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
