[project]
name = "app"
version = "0.1.0"
description = "A simple to-do app."
authors = [
    {name = "Anna Makarudze",email = "amakarudze@gmail.com"},
    {name = "Payel Mahapatra",email = "payelmahapatra8693@gmail.com"},
    {name = "Jammithri Kotapati",email = "kjam0045@gmail.com"},
    {name = "Meenakshi Arrakal Sudesh",email = "meenakshias1995@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (==4.2)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-django (>=4.10.0,<5.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "coverage (>=7.6.12,<8.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pytest-dotenv (>=0.5.2,<0.6.0)",
    "ruff (>=0.9.7,<0.10.0)",
    "selenium (>=4.29.0,<5.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D401",  # imperative mood
    "D415", #missing docstring in public package
    "D104",
    "D100",
    "D103",
    "E501",
    "D101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
